# ps5-uart

./: .gitignore  CMakeLists.txt  README.md  efc_fw.py  efc_fw_event.py  efc_rom.py  tool.py  uart_client.py
bin_blobs/: CMakeLists.txt  arm-toolchain.cmake  efc_stcm_counter.cpp  efc_stcm_counter.ld  efc_thunk.S  efc_thunk.ld  emc_cmd_handler.cpp  emc_cmd_handler.ld  emc_dled_hook.cpp  emc_dled_hook.ld  uart_shell.cpp  uart_shell.ld
uart/: CMakeLists.txt  README.md  button.h  emc_shellcode.S  i2c_bus.h  ps5_uart.cpp  string_utils.h  types.h  uart.h
uart/config/: tusb_config.h
uart/notes/: bootlog_hcmd.txt  uart_eap.txt  update_timestamps.txt
